export const snapshot = {};

snapshot[`duolingo feed 1`] = `
"
   ☆彡starsha ♡(⁠=⁠^⁠･⁠ｪ⁠･⁠^⁠=⁠)☆ finished #1 in the diamond league 71 times!
   Lesley completed a 1100 day streak!
   #:Dani and Fladinei reached a 275 day friend streak!
   ☆彡starsha ♡(⁠=⁠^⁠･⁠ｪ⁠･⁠^⁠=⁠)☆ reached a duolingo japanese score of 90!
   İremnur reached a duolingo french score of 5!
   Thomé reached a duolingo italian score of 83!
   nayun1202 and Junhee reached a 14 day friend streak!
   Jenny Lee played 5 chess matches in a day!
   justusw833 completed a 7 day streak!
   can reached a duolingo spanish score of 55!
   Yic0714 reached a 1000 elo rating in chess!
   Laura did more than 10 lessons in a day!
   Kitsunet20170403 won 10 chess matches. check and mate!
   vilbi761 completed a 14 day streak!
   Richard Chadburn reached a duolingo french score of 68!
💚 Francesco did more than 10 lessons in a day!
💚 Victor Hugo did more than 10 lessons in a day!
💚 Theodor and Sergey reached a 625 day friend streak!
💚 drumwhacker reached a duolingo german score of 81!
💚 aninha kopceski completed a total of 100 perfect lessons!
💚 Çiğdem completed 5 friends quests in a row!
💚 Diego and MissElizabethG reached a 3 day friend streak!
💚 Francesco reached a duolingo english score of 69!
💚 eu and gi reached a 400 day friend streak!
💚 Yelitza and Antonio reached a 175 day friend streak!
💚 djwvdjeb completed a 100 day streak!
💚 Büsra Dölek won 100 chess matches. check and mate!
💚 Vicky and Mai reached a 125 day friend streak!
💚 ,rima and asya_7 A reached a 30 day friend streak!
💚 Marzenna and Katie reached a 675 day friend streak!
💚 Nhi and Susanne reached a 175 day friend streak!
💚 Jackie Prado completed 10 friends quests in a row!
💚 seher ★ finished top 3 and was promoted to the pearl league!
💚 Viktoriia completed a 300 day streak!
💚 Alexey and Александр reached a 150 day friend streak!
💚 Smt S completed a 250 day streak!
💚 jeannemiaou. completed 5 friends quests in a row!
💚 Marina and Людмила reached a 14 day friend streak!
💚 AŽ completed 70 friends quests in a row!
💚 Alexander completed a 1600 day streak!
💚 Татьяна did more than 10 lessons in a day!
💚 Sony completed 20 friends quests in a row!
💚 Mərdan and Franklin reached a 75 day friend streak!
💚 Ana and Artur reached a 675 day friend streak!
💚 Ingrid reached a duolingo spanish score of 110!
💚 ANONYME shared a sentence 
💚 carky crak collected the may badge!
💚 Aki and Aideè reached a 675 day friend streak!
💚 Unicornia264 completed a 100 day streak!
💚 Angel shared a sentence 
💚 Angel shared a sentence 
💚 Angel shared a sentence 
💚 ✨KENDYS-D✨ played 5 chess matches in a day!
💚 Hans Svendsen did more than 10 lessons in a day!
💚 jefry2020 completed a 365 day streak!
💚 jefry2020 and Fonsy0 reached a 30 day friend streak!
💚 Maryam completed a 2500 day streak!
💚 ayse and gianluc reached a 600 day friend streak!
💚 justusw833 won 10 chess matches. check and mate!
💚 Amber completed 15 friends quests in a row!
💚 justusw833 earned a total of 2000 xp!
💚 Naman and John reached a 150 day friend streak!
💚 محمد اسماعيل علي مهدي الموشكي reached a duolingo english score of 81!
💚 Laura and Lackó reached a 14 day friend streak!
💚 Quỳnh Anh won 75 chess matches. check and mate!
💚 Rapha1424 reached a duolingo german score of 15!
💚 Puji Maulani Lestari completed a 30 day streak!
💚 Jun I reached a duolingo english score of 107!
💚 Сергей shared a sentence 
💚 Сергей completed a 500 day streak!
💚 ゆ and Karolina reached a 175 day friend streak!
💚 DENİZ earned a total of 20000 xp!
💚 ThisIsACatTripping and Małgorzata reached a 14 day friend streak!
💚 walat and Éva B L reached a 125 day friend streak!
💚 イク did more than 10 lessons in a day!
💚 Nguyễn Thanh Vy❤️ did more than 10 lessons in a day!
💚 Nguyễn Thanh Vy❤️ played 5 chess matches in a day!
💚 Nguyễn Thanh Vy❤️ won 100 chess matches. check and mate!
💚 Maryjose reached a duolingo french score of 7!
💚 Naysú finished top 3 and was promoted to the pearl league!
💚 Ania finished top 3 and was promoted to the diamond league!
💚 Gerda completed a 1100 day streak!
💚 Francesco and Sílvia reached a 600 day friend streak!
💚 kakao798117 shared a sentence 
💚 Валаа Эльхадж won 400 chess matches. check and mate!
💚 Ana reached a duolingo spanish score of 123!
💚 hajun16kim and walker reached a 30 day friend streak!
💚 Gül completed 5 friends quests in a row!
💚 Ahad muhammed CR7 won 10 chess matches. check and mate!
💚 Karin Hallgren completed 10 friends quests in a row!
💚 ohyoondi12 and z4OEcO7L reached a 3 day friend streak!
💚 Thomé and Belme reached a 675 day friend streak!
💚 Ольга ✨ reached a duolingo english score of 128!
💚 Richard Chadburn did more than 10 lessons in a day!
   An unexpected method to boost your vocab just dropped! 📲
   If you’re a chess fanatic planning your next trip, don’t miss these destinations!
   Struggling to know *which* chess move is best during your games? Read our tips!
   Big news 📰 We’ve expanded our most popular courses with more advanced content!
"
`;

snapshot[`duolingo feed --engage 1`] = `
"
💚 ☆彡starsha ♡(⁠=⁠^⁠･⁠ｪ⁠･⁠^⁠=⁠)☆ finished #1 in the diamond league 71 times!
💚 Lesley completed a 1100 day streak!
💚 #:Dani and Fladinei reached a 275 day friend streak!
💚 ☆彡starsha ♡(⁠=⁠^⁠･⁠ｪ⁠･⁠^⁠=⁠)☆ reached a duolingo japanese score of 90!
💚 İremnur reached a duolingo french score of 5!
💚 Thomé reached a duolingo italian score of 83!
💚 nayun1202 and Junhee reached a 14 day friend streak!
💚 Jenny Lee played 5 chess matches in a day!
💚 justusw833 completed a 7 day streak!
💚 can reached a duolingo spanish score of 55!
💚 Yic0714 reached a 1000 elo rating in chess!
💚 Laura did more than 10 lessons in a day!
💚 Kitsunet20170403 won 10 chess matches. check and mate!
💚 vilbi761 completed a 14 day streak!
💚 Richard Chadburn reached a duolingo french score of 68!
💚 Francesco did more than 10 lessons in a day!
💚 Victor Hugo did more than 10 lessons in a day!
💚 Theodor and Sergey reached a 625 day friend streak!
💚 drumwhacker reached a duolingo german score of 81!
💚 aninha kopceski completed a total of 100 perfect lessons!
💚 Çiğdem completed 5 friends quests in a row!
💚 Diego and MissElizabethG reached a 3 day friend streak!
💚 Francesco reached a duolingo english score of 69!
💚 eu and gi reached a 400 day friend streak!
💚 Yelitza and Antonio reached a 175 day friend streak!
💚 djwvdjeb completed a 100 day streak!
💚 Büsra Dölek won 100 chess matches. check and mate!
💚 Vicky and Mai reached a 125 day friend streak!
💚 ,rima and asya_7 A reached a 30 day friend streak!
💚 Marzenna and Katie reached a 675 day friend streak!
💚 Nhi and Susanne reached a 175 day friend streak!
💚 Jackie Prado completed 10 friends quests in a row!
💚 seher ★ finished top 3 and was promoted to the pearl league!
💚 Viktoriia completed a 300 day streak!
💚 Alexey and Александр reached a 150 day friend streak!
💚 Smt S completed a 250 day streak!
💚 jeannemiaou. completed 5 friends quests in a row!
💚 Marina and Людмила reached a 14 day friend streak!
💚 AŽ completed 70 friends quests in a row!
💚 Alexander completed a 1600 day streak!
💚 Татьяна did more than 10 lessons in a day!
💚 Sony completed 20 friends quests in a row!
💚 Mərdan and Franklin reached a 75 day friend streak!
💚 Ana and Artur reached a 675 day friend streak!
💚 Ingrid reached a duolingo spanish score of 110!
💚 ANONYME shared a sentence 
💚 carky crak collected the may badge!
💚 Aki and Aideè reached a 675 day friend streak!
💚 Unicornia264 completed a 100 day streak!
💚 Angel shared a sentence 
💚 Angel shared a sentence 
💚 Angel shared a sentence 
💚 ✨KENDYS-D✨ played 5 chess matches in a day!
💚 Hans Svendsen did more than 10 lessons in a day!
💚 jefry2020 completed a 365 day streak!
💚 jefry2020 and Fonsy0 reached a 30 day friend streak!
💚 Maryam completed a 2500 day streak!
💚 ayse and gianluc reached a 600 day friend streak!
💚 justusw833 won 10 chess matches. check and mate!
💚 Amber completed 15 friends quests in a row!
💚 justusw833 earned a total of 2000 xp!
💚 Naman and John reached a 150 day friend streak!
💚 محمد اسماعيل علي مهدي الموشكي reached a duolingo english score of 81!
💚 Laura and Lackó reached a 14 day friend streak!
💚 Quỳnh Anh won 75 chess matches. check and mate!
💚 Rapha1424 reached a duolingo german score of 15!
💚 Puji Maulani Lestari completed a 30 day streak!
💚 Jun I reached a duolingo english score of 107!
💚 Сергей shared a sentence 
💚 Сергей completed a 500 day streak!
💚 ゆ and Karolina reached a 175 day friend streak!
💚 DENİZ earned a total of 20000 xp!
💚 ThisIsACatTripping and Małgorzata reached a 14 day friend streak!
💚 walat and Éva B L reached a 125 day friend streak!
💚 イク did more than 10 lessons in a day!
💚 Nguyễn Thanh Vy❤️ did more than 10 lessons in a day!
💚 Nguyễn Thanh Vy❤️ played 5 chess matches in a day!
💚 Nguyễn Thanh Vy❤️ won 100 chess matches. check and mate!
💚 Maryjose reached a duolingo french score of 7!
💚 Naysú finished top 3 and was promoted to the pearl league!
💚 Ania finished top 3 and was promoted to the diamond league!
💚 Gerda completed a 1100 day streak!
💚 Francesco and Sílvia reached a 600 day friend streak!
💚 kakao798117 shared a sentence 
💚 Валаа Эльхадж won 400 chess matches. check and mate!
💚 Ana reached a duolingo spanish score of 123!
💚 hajun16kim and walker reached a 30 day friend streak!
💚 Gül completed 5 friends quests in a row!
💚 Ahad muhammed CR7 won 10 chess matches. check and mate!
💚 Karin Hallgren completed 10 friends quests in a row!
💚 ohyoondi12 and z4OEcO7L reached a 3 day friend streak!
💚 Thomé and Belme reached a 675 day friend streak!
💚 Ольга ✨ reached a duolingo english score of 128!
💚 Richard Chadburn did more than 10 lessons in a day!
💚 An unexpected method to boost your vocab just dropped! 📲
💚 If you’re a chess fanatic planning your next trip, don’t miss these destinations!
💚 Struggling to know *which* chess move is best during your games? Read our tips!
💚 Big news 📰 We’ve expanded our most popular courses with more advanced content!
"
`;

snapshot[`duolingo follows 1`] = `
"
👤 Following 532 people.
👤 Followed by 1038 people.
"
`;

snapshot[`duolingo follows --follow 1`] = `
"
👤 Following 532 people.
👤 Followed by 1038 people.
✅ Followed Burcu.
✅ Followed Zane Ķirsone.
✅ Followed ОБОЮДНО.
✅ Followed Mihriban.
✅ Followed hasan.
✅ Followed leroi555.
✅ Followed Requin55J.
✅ Followed Bruno1.
✅ Followed 顏名菲_Miffy.
✅ Followed Duocorn33.
"
`;

snapshot[`duolingo follows --unfollow 1`] = `
"
👤 Following 542 people.
👤 Followed by 1038 people.
❌ Unfollowed Norbert.
❌ Unfollowed Ben.
❌ Unfollowed Karin Hallgren.
❌ Unfollowed bananova_slupka.
❌ Unfollowed Alexander.
❌ Unfollowed Sansan.
❌ Unfollowed Marie Sarger.
❌ Unfollowed Elisa G.
❌ Unfollowed Agnese Klindžāne-Klinšāne.
❌ Unfollowed Roghy Mahmoudi.
❌ Unfollowed Lenny.
❌ Unfollowed Paty.
❌ Unfollowed Jessi.
❌ Unfollowed Martha.
❌ Unfollowed Monika Orosz.
❌ Unfollowed عبدالله ماريا.
❌ Unfollowed David02BMW909.
❌ Unfollowed Cookie.
❌ Unfollowed Hatice Kurtgöz.
❌ Unfollowed Anaya.
❌ Unfollowed ecgEva.
❌ Unfollowed beron.
❌ Unfollowed lelele_xyu.
❌ Unfollowed Oscar♟.
❌ Unfollowed pedro Emanuel llamo Trujillo.
"
`;

snapshot[`duolingo league 1`] = `
"
                                          
 1. Tuğrul 👀                     16371 XP
 2. Ben 💪                        13900 XP
 3. Agnese Klindžāne-Klinšāne     11398 XP
 4. Norbert 😡                     8711 XP
 5. hai 🏆                     👤  7157 XP
 6. Paty                           7010 XP
 7. Sansan                         6957 XP
 8. Marie Sarger                   6664 XP
 9. Miquel                         5046 XP
10. bananova_slupka 💩             4476 XP
11. Karin Hallgren 🇪🇸              4203 XP
12. Roghy Mahmoudi 🏆              4031 XP
13. Elisa G                        3705 XP
14. Vyrna23                    👤  3512 XP
15. Alexander 🇷🇺                   3111 XP
16. Hans Svendsen 😎           👤  3064 XP
17. YOONA 🏆                   👤  2322 XP
18. Lenny 🏆                       1830 XP
19. Dini Pol 😡                    1449 XP
20. Klaidas Vaitkus                1378 XP
"
`;

snapshot[`duolingo league --follow 1`] = `
"
✅ Followed Ben.
✅ Followed Agnese Klindžāne-Klinšāne.
✅ Followed Norbert.
✅ Followed Paty.
✅ Followed Sansan.
✅ Followed Marie Sarger.
✅ Followed Miquel.
✅ Followed undefined.
✅ Followed Karin Hallgren.
✅ Followed Roghy Mahmoudi.
✅ Followed Elisa G.
✅ Followed Alexander.
✅ Followed Lenny.
✅ Followed Dini Pol.
✅ Followed Klaidas Vaitkus.
                                          
 1. Tuğrul 👀                     16371 XP
 2. Ben 💪                        13900 XP
 3. Agnese Klindžāne-Klinšāne     11398 XP
 4. Norbert 😡                     8711 XP
 5. hai 🏆                     👤  7157 XP
 6. Paty                           7010 XP
 7. Sansan                         6957 XP
 8. Marie Sarger                   6664 XP
 9. Miquel                         5046 XP
10. bananova_slupka 💩             4476 XP
11. Karin Hallgren 🇪🇸              4203 XP
12. Roghy Mahmoudi 🏆              4031 XP
13. Elisa G                        3705 XP
14. Vyrna23                    👤  3512 XP
15. Alexander 🇷🇺                   3111 XP
16. Hans Svendsen 😎           👤  3064 XP
17. YOONA 🏆                   👤  2322 XP
18. Lenny 🏆                       1830 XP
19. Dini Pol 😡                    1449 XP
20. Klaidas Vaitkus                1378 XP
"
`;
